<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="197dp"
        android:text="@string/main_screen"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/products"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="495dp"
        android:onClick="click_function"
        android:text="@string/button1_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="225dp"
        android:onClick="click_function"
        android:text="@string/button2_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/products" />

</androidx.constraintlayout.widget.ConstraintLayout>