<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="725dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/optionsTittle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/options"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToMain"
                android:text="@string/back_arrow" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/save" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="50dp"
            android:text="@string/darkmode"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Font size:"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>